--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
 </head>
 <body>
 <header>
-  <app-bar><app-bar>
+  <app-bar></app-bar>
 </header>
 <main>
-  <div id="search-container" class="search-container">
-    <input placeholder="Search football club" id="searchElement" type="search">
-    <button id="searchButtonElement" type="submit">Search</button>
-  </div>
+  <search-bar></search-bar>
   <div id="clubList"></div>
 </main>
 <script src="app.js" type="module"></script>
